self-signed/ingress-somecompany-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-somecompany-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/issuer: ca-cert-issuer
spec:
  tls:
    - hosts:
      - dev.somecompany.com
      secretName: dev-sc-secret
  rules:
    - host: dev.somecompany.com
      http:
        paths:
          - path: /?(.*) 
            backend:
              serviceName: test-service
              servicePort: 80
